# docs/swagger.json
@@ -69,7 +69,13 @@
                         }
                     },
                     "400": {
-                        "description": "error",
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/bot.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/bot.ErrorResponse"
                         }
